--- a/src/main/resources/assets/bookyclient/lang/de_DE.lang
+++ b/src/main/resources/assets/bookyclient/lang/de_DE.lang
@@ -14,8 +14,9 @@ accounts.editaccount=Konto bearbeiten
 accounts.search=Suche
 accounts.premium=Premium
 accounts.notpremium=Nicht Premium
-accounts.timesused=Verwendete Zeiten:
+accounts.timesused=Wie oft verwendet:
 accounts.lastused=Zuletzt verwendet:
 accounts.alreadylogged=Sie sind bereits an diesem Konto angemeldet
 accounts.reloadskins=Skins neu laden
 accounts.accounts=Konten
+accounts.offlinelogin=Offline Einloggen
