--- a/src/main/resources/assets/bookyclient/lang/en_US.lang
+++ b/src/main/resources/assets/bookyclient/lang/en_US.lang
@@ -19,3 +19,4 @@ accounts.lastused=Last Used:
 accounts.alreadylogged=You are already logged in to this account.
 accounts.reloadskins=Reload Skins
 accounts.accounts=Accounts
+accounts.offlinelogin=Offline Login
