--- a/src/main/resources/assets/bookyclient/lang/en_US.lang
+++ b/src/main/resources/assets/bookyclient/lang/en_US.lang
@@ -14,7 +14,7 @@ accounts.editaccount=Edit Account
 accounts.search=Search
 accounts.premium=Premium
 accounts.notpremium=Not Premium
-accounts.timesused=Times Used:
+accounts.timesused=%s Times Used
 accounts.lastused=Last Used:
 accounts.alreadylogged=You are already logged in to this account.
 accounts.reloadskins=Reload Skins
