made date configurable

--- a/src/main/resources/assets/bookyclient/lang/de_DE.lang
+++ b/src/main/resources/assets/bookyclient/lang/de_DE.lang
@@ -52,6 +52,8 @@ keystrokes.reach.none=Nichts
 keystrokes.reach.format=%s Blöcke
 
 # Client
+client.date=dd.MM.yyyy
+
 client.gui.prefix=Client Einstellungen
 client.gui.name=Client Einstellungen...
 
