--- a/src/main/resources/assets/bookyclient/lang/en_US.lang
+++ b/src/main/resources/assets/bookyclient/lang/en_US.lang
@@ -65,3 +65,5 @@ client.colors.red=Red:
 client.colors.green=Green:
 client.colors.blue=Blue:
 client.colors.opacity=Opacity:
+
+client.async_screenshots.started=Taking screenshot...
