--- a/src/main/resources/assets/bookyclient/lang/en_US.lang
+++ b/src/main/resources/assets/bookyclient/lang/en_US.lang
@@ -67,3 +67,7 @@ client.colors.blue=Blue:
 client.colors.opacity=Opacity:
 
 client.async_screenshots.started=Taking screenshot...
+
+# Keybindings
+client.key.category=Client
+client.key.zoom=Zoom
