--- a/src/main/resources/assets/bookyclient/lang/en_US.lang
+++ b/src/main/resources/assets/bookyclient/lang/en_US.lang
@@ -71,3 +71,4 @@ client.async_screenshots.started=Taking screenshot...
 # Keybindings
 client.key.category=Client
 client.key.zoom=Zoom
+client.key.perspective=Perspective
